# xel

./: .gitignore  AG.env  Client.py  ClienteRest.py  Deploy.sh  LICENSE  Readme.md  Xel.yml  Xel_remote.yml  build.sh  coordinator_structure.json  docker-compose (swarm).yml  docker-compose.yml  docker-compose_demandservices.yml  pull.sh  resources.json
AG/: Dockerfile  (+1 more)
NonFunctional/Services_Creator/app/puzzlemesh/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  launcher.cpp  launcher.h  main.cpp  parser.cpp  parser.h  puzzlemesh
NonFunctional/Services_Creator/app/puzzlemesh/buildingcomponents/: buildingblock.cpp  buildingblock.h  pattern.cpp  pattern.h  pipeline.cpp  pipeline.h  single.cpp  single.h  stage.cpp  stage.h  workflow.cpp  workflow.h
NonFunctional/Services_Creator/app/puzzlemesh/functions/: stringfunctions.cpp  stringfunctions.h
NonFunctional/Services_Creator/app/puzzlemesh/logs/: log_2022-10-27 21:08:27.txt  log_2022-10-27 21:08:58.txt  log_2022-10-27 21:09:05.txt  log_2022-10-27 21:10:09.txt  log_2022-10-27 21:25:28.txt  log_2022-10-27 21:25:49.txt  log_2022-10-27 21:26:49.txt  log_2022-10-27 21:27:05.txt  log_2022-10-27 21:28:32.txt  log_2022-10-27 21:50:57.txt  log_2022-10-27 21:52:57.txt  log_2022-10-27 21:58:47.txt  log_2022-10-27 21:58:48.txt  log_2022-10-27 21:59:31.txt  log_2022-10-27 22:00:02.txt  log_2022-10-27 22:09:58.txt  log_2022-10-27 22:10:28.txt  log_2022-10-27 22:11:33.txt  log_2022-10-27 22:11:57.txt  log_2022-10-27 22:11:58.txt  log_2022-10-27 22:12:03.txt  log_2022-10-27 22:14:01.txt  log_2022-10-27 22:14:29.txt  log_2022-10-27 22:15:00.txt  log_2022-10-27 22:15:52.txt  log_2022-10-27 22:16:22.txt  log_2022-10-27 22:20:49.txt  (+60 more)
(+2260 files in other folders)
